fix: Sending data from unity to console app fixed

--- a/src/samples/CanConNet/CanConNet.csproj
+++ b/src/samples/CanConNet/CanConNet.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ixxat.Vci4" Version="4.1.12" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 
 </Project>
